[tool.poetry]
name = "clickhouse-benchmark-py"
version = "0.1.0"
description = "clickhouse-benchmark-py project dependencies"
authors = ["Ivan Alexeev, Michael Razuvaev"]
license = "MIT"
readme = "README.md"
packages = [{include = "clickhouse_benchmark_py"}]

[tool.poetry.dependencies]
python = "3.11.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
