[tool.poetry]
name = "clickhouse-benchmark-py"
version = "0.1.0"
description = "clickhouse-benchmark-py project dependencies"
authors = ["Ivan Alexeev, Michael Razuvaev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
